--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node backend/server.mjs"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "cheerio": "^1.0.0-rc.5",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "request": "^2.88.2",
     "vue": "^2.6.11",
     "vuex": "^3.4.0"
   },
