--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.5",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "ramda": "^0.27.1",
     "request": "^2.88.2",
     "vue": "^2.6.11",
     "vuex": "^3.4.0"
