--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.21.2",
     "cheerio": "^1.0.0-rc.5",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "ramda": "^0.27.1",
     "request": "^2.88.2",
